<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.account.AccountFragment">

    <TextView
        android:id="@+id/tv_akun_saya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Akun Saya"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_elipse_cam"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_akun_saya" />

    <ImageView
        android:id="@+id/iv_cam"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/round_camera"
        app:layout_constraintTop_toTopOf="@id/iv_elipse_cam"
        app:layout_constraintEnd_toEndOf="@id/iv_elipse_cam"
        app:layout_constraintStart_toStartOf="@id/iv_elipse_cam" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_elipse_cam" />

    <TextView
        android:id="@+id/tv_no_handphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nama" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="34dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_handphone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_ubah_akun"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/iv_ubah_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_edit_new" />

                <TextView
                    android:id="@+id/tv_ubah_akun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Ubah Akun"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:id="@+id/line_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/container_my_order"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/iv_my_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_baseline_checklist_24"
                    app:tint="#193C8D" />

                <TextView
                    android:id="@+id/tv_my_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="My Order"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:id="@+id/line_four"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/container_pengaturan_akun"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/iv_pengaturan_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_settings_new" />

                <TextView
                    android:id="@+id/tv_pengaturan_akun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Pengaturan Akun"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:id="@+id/line_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/container_keluar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/iv_keluar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_log_out_new" />

                <TextView
                    android:id="@+id/tv_keluar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Keluar"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:id="@+id/line_three"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Version 1.0.0" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Silakan Sign In Dahulu"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>